--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,8 @@ h2 {
 .todo-form input {
   border-radius: 10px;
   background: #fff;
+  outline: none;
+  border: none;
 }
 
 label {
@@ -106,7 +108,7 @@ label {
 }
 
 .categories input:before {
-  content: "";
+  content: " ";
   display: block;
   width: 60%;
   height: 60%;
@@ -128,7 +130,7 @@ label {
 
 /********* Button submit *****/
 
-#submit__btn {
+.submit__btn {
   margin-top: 20px;
   cursor: pointer;
   font-size: 2rem;
@@ -149,6 +151,28 @@ label {
 
 .task-complete {
   width: auto;
+  margin: auto 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  cursor: pointer;
+
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  height: 24px;
+
+  transition: 0.2s all linear;
+  outline: none;
+}
+
+.task-complete:before {
+  content: "";
+  display: block;
+  width: 60%;
+  height: 60%;
+  margin: 20% auto;
+  border-radius: 50%;
 }
 
 .task-result {
@@ -156,7 +180,6 @@ label {
   padding: 10px 10px;
   width: 100%;
   background: none;
-  justify-content: space-between;
 }
 
 .task-result:focus {
@@ -193,10 +216,11 @@ label {
   display: flex;
 }
 
-.edit-icon,
-.delete-icon {
-  cursor: pointer;
-  margin-left: auto;
+.checkbox-blue {
+  box-shadow: inset 0px 0px 2px 2px var(--btn-color-purple);
+}
+.checkbox-pink {
+  box-shadow: inset 0px 0px 2px 2px var(--btn-color-pink);
 }
 
 .checkbox-blue:checked:before {
